final fixes